@@ -54,6 +54,7 @@ FORMAT_TIME_LOGO		# How to plot time for the GMT time-stamp
 GMT_FFT				# Which FFT algorithm to use
 GMT_HISTORY			# Should we update the command history?
 GMT_INTERPOLANT			# Spline interpolant
+GMT_TRIANGULATE			# Triangulation algorithm
 GMT_VERBOSE			# Verbosity level
 #-------------------------------------------------------
 # IO Group:	I/O settings
